--- a/stubs/resources/views/customer/profile/orders/show.antlers.html
+++ b/stubs/resources/views/customer/profile/orders/show.antlers.html
@@ -3,19 +3,19 @@
         {{ 404 }}
     {{ /if }}
 
-    {{ partial:customer/profile/partials/back_link text="Back to orders" url="/account/orders" show_on_desktop="true" }}
+    {{ partial:customer/profile/partials/back_link text="{trans:profile.back_to_orders}" url="/account/orders" show_on_desktop="true" }}
 
     <div class="container max-w-5xl py-head">
         {{ gaia:customer:order order_id="{ order_id }"}}
             {{ financialStatusText = switch(
-                (displayFinancialStatus == 'PAID') => 'Paid',
-                (displayFinancialStatus == 'REFUNDED') => 'Refunded',
-                (displayFinancialStatus == 'AUTHORIZED') => 'Authorized',
-                (displayFinancialStatus == 'EXPIRED') => 'Expired',
-                (displayFinancialStatus == 'PARTIALLY_PAID') => 'Partially Paid',
-                (displayFinancialStatus == 'PARTIALLY_REFUNDED') => 'Partially Refunded',
-                (displayFinancialStatus == 'PENDING') => 'Pending',
-                (displayFinancialStatus == 'VOIDED') => 'Voided',
+                (displayFinancialStatus == 'PAID') => {trans:profile.orders.status.paid},
+                (displayFinancialStatus == 'REFUNDED') => {trans:profile.orders.status.refunded},
+                (displayFinancialStatus == 'AUTHORIZED') => {trans:profile.orders.status.authorized},
+                (displayFinancialStatus == 'EXPIRED') => {trans:profile.orders.status.expired},
+                (displayFinancialStatus == 'PARTIALLY_PAID') => {trans:profile.orders.status.partially_paid},
+                (displayFinancialStatus == 'PARTIALLY_REFUNDED') => {trans:profile.orders.status.partially_refunded},
+                (displayFinancialStatus == 'PENDING') => {trans:profile.orders.status.pending},
+                (displayFinancialStatus == 'VOIDED') => {trans:profile.orders.status.voided},
                 () => 'Unknown Status'
             )}}
             
@@ -33,16 +33,16 @@
 
             {{ orderStatusText = switch(
                 (cancelReason) => 'Cancelled',
-                (displayFulfillmentStatus == '') => 'Pending',
-                (displayFulfillmentStatus == 'FULFILLED') => 'Completed',
-                (displayFulfillmentStatus == 'IN_PROGRESS') => 'In Progress',
-                (displayFulfillmentStatus == 'ON_HOLD') => 'On Hold',
-                (displayFulfillmentStatus == 'OPEN' || displayFulfillmentStatus == 'UNFULFILLED') => 'Pending',
-                (displayFulfillmentStatus == 'PARTIALLY_FULFILLED') => 'Partially Fulfilled',
-                (displayFulfillmentStatus == 'PENDING_FULFILLMENT') => 'Pending Fulfillment',
-                (displayFulfillmentStatus == 'REQUEST_DECLINED') => 'Request Declined',
-                (displayFulfillmentStatus == 'RESTOCKED') => 'Restocked',
-                (displayFulfillmentStatus == 'SCHEDULED') => 'Scheduled',
+                (displayFulfillmentStatus == '') => {trans:profile.orders.status.pending},
+                (displayFulfillmentStatus == 'FULFILLED') => {trans:profile.orders.status.completed},
+                (displayFulfillmentStatus == 'IN_PROGRESS') => {trans:profile.orders.status.in_progress},
+                (displayFulfillmentStatus == 'ON_HOLD') => {trans:profile.orders.status.on_hold},
+                (displayFulfillmentStatus == 'OPEN' || displayFulfillmentStatus == 'UNFULFILLED') => {trans:profile.orders.status.pending},
+                (displayFulfillmentStatus == 'PARTIALLY_FULFILLED') => {trans:profile.orders.status.partially_fulfilled},
+                (displayFulfillmentStatus == 'PENDING_FULFILLMENT') => {trans:profile.orders.status.pending_fulfillment},
+                (displayFulfillmentStatus == 'REQUEST_DECLINED') => {trans:profile.orders.status.request_declined},
+                (displayFulfillmentStatus == 'RESTOCKED') => {trans:profile.orders.status.restocked},
+                (displayFulfillmentStatus == 'SCHEDULED') => {trans:profile.orders.status.scheduled},
                 () => 'Pending'
             )}}
             
@@ -64,26 +64,26 @@
             {{ if no_results }}
                 <p class="flex flex-col items-center justify-center py-32 text-lg text-center font-display card">
                     {{ svg src="orders" class="w-12 h-12 mb-6 fill-slate-500" aria-hidden="true" }}
-                    We couldn’t find this order
+                    {{ trans:profile.orders.order_not_found }}
                 </p>
             {{ /if  }}
 
             {{ unless no_results }}
-                <x-heading level="1" class="mb-4">"Order {{ name }}</x-heading>
+                <x-heading level="1" class="mb-4">{{ trans:profile.orders.order }} {{ name }}</x-heading>
 
                 <div class="grid grid-cols-1 gap-6 mt-12">
                     {{ fulfillments }}
                         <div class="flex flex-col p-10 bg-white border-2 border-dashed rounded-lg border-slate-500">
                             {{ trackingInfo }}
-                                <x-heading level="2" size="3" class="w-full">Your package has shipped with {{ company }}</x-heading>
+                                <x-heading level="2" size="3" class="w-full">{{ trans:profile.orders.tracking.shipped_with }} {{ company }}</x-heading>
 
                                 <p class="mt-4 text-sm">
-                                    <span class="text-sm text-slate-700">Tracking number:</span>
+                                    <span class="text-sm text-slate-700">{{ trans:profile.orders.tracking.tracking_number }}:</span>
                                     <span class="font-medium">{{ number }}</span>
                                 </p>
                                 
                                 {{ if url }}
-                                    <x-button variant="primary" as="a" href="{ url }" target="_blank" class="mt-8">Track your package</x-button>
+                                    <x-button variant="primary" as="a" href="{ url }" target="_blank" class="mt-8">{{ trans:profile.orders.tracking.track_package_button }}</x-button>
                                 {{ /if }}
                             {{ /trackingInfo }}
                         </div>
@@ -92,27 +92,27 @@
                     <section class="card">
                         <div class="grid grid-cols-2 gap-x-2 gap-y-10 sm:grid-cols-3 xl:grid-cols-5">
                             <p class="flex flex-col">
-                                <span class="text-sm text-slate-700">Order Status:</span>
+                                <span class="text-sm text-slate-700">{{ trans:profile.orders.order_status }}:</span>
                                 <span class="font-medium {{ orderStatusClass }}">{{ orderStatusText }}</span>
                             </p>
 
                             <p class="flex flex-col">
-                                <span class="text-sm text-slate-700">Order Number:</span>
+                                <span class="text-sm text-slate-700">{{ trans:profile.orders.order_number }}:</span>
                                 <span class="font-medium">{{ name }}</span>
                             </p>
 
                             <p class="flex flex-col">
-                                <span class="text-sm text-slate-700">Ordered On:</span>
+                                <span class="text-sm text-slate-700">{{ trans:profile.orders.ordered_on }}:</span>
                                 <span class="font-medium">{{ createdAt | format('j M o') }}</span>
                             </p>
 
                             <p class="flex flex-col">
-                                <span class="text-sm text-slate-700">Payment:</span>
+                                <span class="text-sm text-slate-700">{{ trans:profile.orders.payment }}:</span>
                                 <span class="font-medium {{ financialStatusClass }}">{{ financialStatusText }}</span>
                             </p>
                             
                             <p class="flex flex-col">
-                                <span class="text-sm text-slate-700">Confirmation Number:</span>
+                                <span class="text-sm text-slate-700">{{ trans:profile.orders.confirmation_number}}:</span>
                                 <span class="font-medium">{{ confirmationNumber }}</span>
                             </p>
                         </div>
@@ -121,7 +121,7 @@
                     <section class="card">
                         <div class="grid grid-cols-1 gap-y-10 gap-x-2 md:grid-cols-2">
                             <div>
-                                <x-heading level="2" size="3" class="mb-4">Shipping Address</x-heading>
+                                <x-heading level="2" size="3" class="mb-4">{{ trans:default.shipping_address }}</x-heading>
                                 <address class="not-italic leading-relaxed text-slate-600">
                                     {{ if shippingAddress.firstName || shippingAddress.lastName }}
                                         {{ shippingAddress.firstName }} {{ shippingAddress.lastName }}<br>
@@ -153,7 +153,7 @@
                                 </address>
                             </div>
                             <div>
-                                <x-heading level="2" size="3" class="mb-4">Billing Address</x-heading>
+                                <x-heading level="2" size="3" class="mb-4">{{ trans:default.billing_address }}</x-heading>
                                 <address class="not-italic leading-relaxed text-slate-600">
                                     {{ if billingAddress.firstName || billingAddress.lastName }}
                                         {{ billingAddress.firstName }} {{ billingAddress.lastName }}<br>
@@ -180,7 +180,7 @@
                     </section>
 
                     <section class="card">
-                        <x-heading level="2" size="3" class="mb-10">Ordered Items</x-heading>
+                        <x-heading level="2" size="3" class="mb-10">{{ trans:profile.orders.ordered_items }}</x-heading>
 
                         <ul class="grid mt-10 divide-y divide-slate-200">
                             {{ lineItems }}
@@ -198,12 +198,11 @@
                                             <p class="flex items-center text-slate-700">
                                                 {{ gaia:currency price="{ originalUnitPriceSet.shopMoney.amount }" }}
                                                 <span class="inline-block mx-3 rounded-full size-2 bg-slate-200"></span>
-                                                <span class="text-xs"><span class="select-none">SKU: </span>{{ variant.sku }}</span>
+                                                <span class="text-xs"><span class="select-none">{{ trans:default.sku }}: </span>{{ variant.sku }}</span>
                                             </p>
 
                                             <p class="text-sm text-slate-700">
-                                                Quantity:
-                                                {{ quantity }}
+                                                {{ trans:default.quantity }}: {{ quantity }}
                                             </p>
                                         </div>
                                     </li>
@@ -214,27 +213,27 @@
                         <table class="w-full max-w-lg ml-auto mt-14">
                             <tbody>
                                 <tr class="grid grid-cols-2 py-4">
-                                    <td class="font-medium">Subtotal:</td>
+                                    <td class="font-medium">{{ trans:default.totals.subtotal }}:</td>
                                     <td class="text-right">{{ gaia:currency price="{ subtotalPriceSet.shopMoney.amount }" }}</td>
                                 </tr>
                                 <tr class="grid grid-cols-2 py-4">
-                                    <td class="font-medium">Shipping:</td>
+                                    <td class="font-medium">{{ trans:default.totals.shipping }}:</td>
                                     <td class="text-right">{{ gaia:currency price="{ totalShippingPriceSet.shopMoney.amount }" }}</td>
                                 </tr>
                                 {{ if totalDiscountsSet.shopMoney.amount !== '0.0'}}
                                 <tr class="grid grid-cols-2 py-4">
-                                    <td class="font-medium">Discounts:</td>
+                                    <td class="font-medium">{{ trans:default.totals.discounts }}:</td>
                                     <td class="text-right">-{{ gaia:currency price="{ totalDiscountsSet.shopMoney.amount }" }}</td>
                                 </tr>
                                 {{ /if }}
                                 {{ if totalRefundedSet.shopMoney.amount !== '0.0'}}
                                 <tr class="grid grid-cols-2 py-4">
-                                    <td class="font-medium">Refunded:</td>
+                                    <td class="font-medium">{{ trans:default.totals.refunded }}:</td>
                                     <td class="text-right">-{{ gaia:currency price="{ totalRefundedSet.shopMoney.amount }" }}</td>
                                 </tr>
                                 {{ /if }}
                                 <tr class="grid grid-cols-2 py-4">
-                                    <td class="text-xl font-medium">Grand Total:</td>
+                                    <td class="text-xl font-medium">{{ trans:default.totals.grand_total }}:</td>
                                     <td class="text-xl text-right">{{ gaia:currency price="{ currentTotalPriceSet.shopMoney.amount }" }}</td>
                                 </tr>
                             </tbody>
