--- a/stubs/resources/views/customer/auth/login/index.antlers.html
+++ b/stubs/resources/views/customer/auth/login/index.antlers.html
@@ -22,7 +22,7 @@
 
                 <div class="flex justify-end">
                     <x-button variant="link" class="text-sm" as="a" href="/account/recover">
-                        {{ trans:default.form_forgot_password }}
+                        {{ trans:forms.forgot_password_link_text }}
                     </x-button>
                 </div>
 
