--- a/stubs/resources/views/features/livesearch/_product.antlers.html
+++ b/stubs/resources/views/features/livesearch/_product.antlers.html
@@ -12,7 +12,7 @@
             {{ gaia:product:price }}
                 <div class="flex items-center gap-2 text-sm mt-2">
                     <span class="block tracking-wide">
-                        {{ if {gaia:product:configurable} }}From{{ /if }}
+                        {{ if {gaia:product:configurable} }}{{ trans:default.from }}{{ /if }}
                         <span class="{{ if is_discounted }}text-red-700{{ /if }}">{{ gaia:currency :price="min_display_price" }}</span>
                     </span>
                     {{ if is_discounted }}
