--- a/stubs/resources/views/features/minicart/_counter.antlers.html
+++ b/stubs/resources/views/features/minicart/_counter.antlers.html
@@ -5,7 +5,7 @@
 
 <div class="relative">
     <x-header-button 
-        title="Cart"
+        title="{{ trans:default.cart }}"
         icon="shopping_bag"
         onclick="window.dispatchEvent(new CustomEvent('drawer:open:minicart'))"
         aria-controls="minicart"
