--- a/stubs/resources/views/features/minicart/_products.antlers.html
+++ b/stubs/resources/views/features/minicart/_products.antlers.html
@@ -2,7 +2,9 @@
     {{ if products.no_results }}
         <div class="flex flex-col items-center justify-center mt-10 h-full rounded-xl">
             {{ svg src="orders" class="size-10" }}
-            <p class="my-2">Your cart is currently empty.</p>
+            <p class="my-2">
+                {{ trans:minicart.empty_cart_message }}
+            </p>
         </div>
     {{ /if }}
 
@@ -30,7 +32,7 @@
 
                                     <div class="flex">
                                         <x-button icon="delete" variant="ghost" wire:click="removeFromCart('{{ line:id }}')" wire:loading.attr="disabled" class="btn-sm text-slate-800">
-                                            Remove
+                                            {{ trans:default.remove }}
                                         </x-button>
                                     </div>
                                 </div>
