--- a/stubs/resources/views/features/minicart/discount/_form.antlers.html
+++ b/stubs/resources/views/features/minicart/discount/_form.antlers.html
@@ -1,11 +1,13 @@
 <form wire:submit.prevent="addDiscountToCart">
 
-    <label for="minicartDiscountCode" class="text-sm">Discount code?</label>
+    <label for="minicartDiscountCode" class="text-sm">
+        {{ trans:minicart.discounts.input_label }}
+    </label>
 
     <div class="relative flex items-center justify-between my-3">
         <x-input class="pr-16" wire:model.defer="discountCode" placeholder="Discount code" id="minicartDiscountCode" />
         <x-button variant="ghost" type="submit" class="absolute ml-5 h-[calc(100%-6px] t-[3px] btn-sm whitespace-nowrap right-[6px]" x-show="$wire.discountCode.length > 1">
-            Apply
+            {{ trans:default.apply }}
         </x-button>
     </div>
 
