--- a/stubs/resources/views/features/minicart/item/_quantity.antlers.html
+++ b/stubs/resources/views/features/minicart/item/_quantity.antlers.html
@@ -20,7 +20,7 @@
     class="flex items-center gap-1 p-1 mt-5"
 > 
     <div class="relative px-1 btn btn-ghost has-focus-visible:outline-2 has-focus-visible:outline-blue-200">
-        <span class="text-sm">Qty: <span x-text="quantity"></span></span>
+        <span class="text-sm">{{ trans:default.qty }}: <span x-text="quantity"></span></span>
         <select class="absolute inset-0 opacity-0 cursor-pointer" x-model="quantity" @change="updateQuantity($event.target.value)">
             {{ loop times="50" }}
                 <option value="{{ index + 1 }}">{{ index + 1 }}</option>
